src/objects/Contact_Person_Role_and_Decision_Area__c.object
<CustomObject>
    <description>Child object of contact that stores the contacts role for a decision area. A contact can have may roles related to different decision areas.</description>
    <fields>
        <fullName>Contact_Person_Decision_Area__c</fullName>
        <label>Contact Person Decision Area</label>
        <picklist>
            <controllingField>Sales_Area__c</controllingField>
            <picklistValues>
                <fullName>PN DK - Breve Indland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK - Breve Udland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK - Magasinpost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK - Blade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK - Facility Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK - Pakker Indland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK - Addresseløse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK - Lokale ugeaviser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK - E-Kommunikation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK - E-Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK - Tillægsydelser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK - PALLET Export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK - PAKKER Export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK - Kurér Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK - In-Night</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME - Facility services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME - Hemleverans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME - Varudistribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME - Affärskommunikation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME - Tidningar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME - Reklam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO FI DPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO SE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Decision_Level__c</fullName>
        <label>Contact Person Decision Level</label>
        <picklist>
            <picklistValues>
                <fullName>Strategic Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tactical Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Level</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Role__c</fullName>
        <label>Contact Person Role</label>
        <picklist>
            <controllingField>Sales_Area__c</controllingField>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operative Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoicing Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <label>Contact Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Person Roles and Decision Areas</relationshipLabel>
        <relationshipName>Contact_Person_Roles_and_Decision_Areas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <label>Sales Area</label>
        <picklist>
            <picklistValues>
                <fullName>PDK BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDK LO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO FI DPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Contact Person Role and Decision Area</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CPRD-{0000000}</displayFormat>
        <label>Contact Person Role and Decision Area Na</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Person Roles and Decision Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>